CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/Url_Invoke_external__mdt.object-meta.xml
<CustomObject>
    <description>Url a invocar servicio externo Multiconsulta o multiservicio, según Empresa del ejecutivo</description>
    <label>Url Invoke external</label>
    <pluralLabel>Url Invoke externals</pluralLabel>
</CustomObject>