CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consorcio Banco</fullName>
                <default>true</default>
                <label>Consorcio Banco</label>
            </value>
            <value>
                <fullName>Consorcio Seguros</fullName>
            </value>
            <value>
                <fullName>Consorcio Corredora de Bolsa</fullName>
            </value>
            <value>
                <fullName>Consorcio Servicios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>