CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/fields/Parametros__c.field-meta.xml
<CustomField>
    <fullName>Parametros__c</fullName>
    <label>Parametros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>