CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/fields/Servicio_Url__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Url__c</fullName>
    <label>Servicio Url</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiconsulta</fullName>
                <default>true</default>
                <label>Multiconsulta</label>
            </value>
            <value>
                <fullName>Multiservicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>