CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/fields/Url_servicio__c.field-meta.xml
<CustomField>
    <fullName>Url_servicio__c</fullName>
    <description>Url del servicio a invocar</description>
    <label>Url servicio</label>
    <required>true</required>
    <type>Url</type>
</CustomField>