CNSDEVCOLECT/force-app/main/default/objects/Url_Invoke_external__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>Empresa__c</columns>
    <columns>Servicio_Url__c</columns>
    <columns>Url_servicio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>